--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/css/owl.carousel.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
@@ -150,11 +154,11 @@
             <div class="squareItem">
               <div class="squareInnerContainer">
                 <div class="squareIcon">
-                  <i class="fab fa-chrome"></i>
+                  <i class="fab fa-github"></i>
                 </div>
                 <div class="squareContent">
                   <h2 class="counter">30</h2>
-                  <h3>Web sites</h3>
+                  <h3>websites</h3>
                 </div>
               </div>
             </div>
@@ -176,12 +180,180 @@
       </div>
     </div>
 
+    <div id="contact" class="contactSection section">
+      <div class="col-md-12 text-center">
+        <p class="subHeading">Like what you see?</p>
+        <h1>I would love to hear from you</h1>
+        <a href="mailTo:wajdidouiri26@gmail.com" class="contactButton"
+          >Get in touch!!</a
+        >
+      </div>
+    </div>
+
+    <div id="portfolio" class="section">
+      <div class="container">
+        <div class="row">
+          <div class="heading">
+            <h1>PORTFOLIO</h1>
+          </div>
+
+          <div class="filter">
+            <ul id="filters">
+              <li><a href="#" data-filter="*" class="current">ALL</a></li>
+              <li><a href="#" data-filter=".apps">Apps</a></li>
+              <li><a href="#" data-filter=".me">Me</a></li>
+              <li><a href="#" data-filter=".websites">Websites</a></li>
+            </ul>
+          </div>
+
+          <div class="itemsContainer">
+            <ul class="items">
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </li>
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="/js/typed.min.js"></script>
     <script src="/js/jquery.easypiechart.min.js"></script>
     <script src="/js/countUp.js"></script>
     <script src="/js/countUp-jquery.js"></script>
     <script src="/js/owl.carousel.min.js"></script>
     <script src="/js/jquery.superslides.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
       integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
@@ -192,6 +364,7 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
