--- a/index.html
+++ b/index.html
@@ -26,8 +26,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
+    <div class="loader">
+      <div class="inner"></div>
+    </div>
     <div id="slides">
-      <div class="overlay"></div>
+      <div
+        class="
+      "
+      ></div>
       <div class="slides-container">
         <img src="/img/pic1.jpg" alt="" />
         <img src="/img/pic2.jpg" alt="" />
@@ -46,7 +52,41 @@
       </nav>
     </div>
 
-    <
+    <nav id="navigation" class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="#">Welcome</a>
+
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#about"
+              >About<span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#stats">Stats</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
     <div id="about" class="section">
       <div class="container">
         <div class="row">
@@ -208,7 +248,7 @@
 
           <div class="itemsContainer">
             <ul class="items">
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
                   <div class="icons">
@@ -225,9 +265,10 @@
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
+                  <div class="imageOverlay"></div>
                 </div>
               </li>
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
                   <div class="icons">
@@ -244,9 +285,10 @@
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
+                  <div class="imageOverlay"></div>
                 </div>
               </li>
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
                   <div class="icons">
@@ -263,9 +305,11 @@
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
+                  <div class="imageOverlay"></div>
                 </div>
               </li>
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
                   <div class="icons">
@@ -282,9 +326,11 @@
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
+                  <div class="imageOverlay"></div>
                 </div>
               </li>
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
                   <div class="icons">
@@ -297,32 +343,73 @@
                     >
                       <i class="fa fa-search"></i>
                     </a>
-                    <a href="" target="_blank" class="projectLink">
+                    <a
+                      href="https://expensify-couldit.herokuapp.com/"
+                      target="_blank"
+                      class="projectLink"
+                      title="Visit"
+                    >
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
+                  <div class="imageOverlay"></div>
                 </div>
               </li>
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+              <li
+                class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
+                onclick=""
+              >
                 <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <img src="img/portfolio/thumbnails/expenses cut1.jpg" />
                   <div class="icons">
                     <a
-                      href="img/portfolio/dog.jpeg"
+                      href="img/portfolio/expenses.jpg"
                       title="View image"
                       class="openButton"
                       data-fancybox
-                      data-caption="fancy dog"
+                      data-caption="Expense App"
                     >
                       <i class="fa fa-search"></i>
                     </a>
-                    <a href="" target="_blank" class="projectLink">
+                    <a
+                      href="https://expensify-couldit.herokuapp.com/"
+                      title="Visit"
+                      target="_blank"
+                      class="projectLink"
+                    >
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
+                  <div class="imageOverlay"></div>
                 </div>
               </li>
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+              <li
+                class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
+                onclick=""
+              >
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="Expense App"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
                   <div class="icons">
@@ -339,6 +426,157 @@
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li
+                class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
+                onclick=""
+              >
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/dog.jpeg"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="fancy dog"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a href="" target="_blank" class="projectLink">
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
                 </div>
               </li>
             </ul>
@@ -346,6 +584,43 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <div class="container">
+        <ul class="footer__social">
+          <li class="footer__social-item">
+            <a
+              target="_blank"
+              href="https://github.com/wajdi29"
+              rel="noopener noreferrer"
+              class="footer__link"
+            >
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a
+              target="_blank"
+              href="https://www.linkedin.com/in/wajdi-douiri-a877a7142"
+              rel="noopener noreferrer"
+              class="footer__link"
+            >
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </li>
+          <li class="footer__social-item">
+            <a
+              target="_blank"
+              href="https://twitter.com/DouiriW"
+              rel="noopener noreferrer"
+              class="footer__link"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+        </ul>
+        <p class="footer-copyright">&copy; Copyright WAJDI DOUIRI 2020</p>
+      </div>
+    </footer>
 
     <script src="/js/typed.min.js"></script>
     <script src="/js/jquery.easypiechart.min.js"></script>
