--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-5">
-            <img class="aboutImage" src="img/waj.jpg" />
+            <img class="aboutImage" src="img/thisone.jpg" />
           </div>
 
           <div class="col-md-7">
