--- a/index.html
+++ b/index.html
@@ -250,14 +250,14 @@
             <ul class="items">
               <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <img src="img/portfolio/thumbnails/square.png" />
                   <div class="icons">
                     <a
-                      href="img/portfolio/dog.jpeg"
+                      href="img/portfolio/screencapture-192-168-1-100-3000-2020-11-20-10_21_32.png"
                       title="View image"
                       class="openButton"
                       data-fancybox
-                      data-caption="fancy dog"
+                      data-caption="Monsters"
                     >
                       <i class="fa fa-search"></i>
                     </a>
@@ -270,18 +270,18 @@
               </li>
               <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <img src="img/portfolio/thumbnails/Exchangesquare.png" />
                   <div class="icons">
                     <a
-                      href="img/portfolio/dog.jpeg"
+                      href="img/portfolio/Exchange.png"
                       title="View image"
                       class="openButton"
                       data-fancybox
-                      data-caption="fancy dog"
+                      data-caption="Exchange Calculator"
                     >
                       <i class="fa fa-search"></i>
                     </a>
-                    <a href="" target="_blank" class="projectLink">
+                    <a href="https://jovial-nightingale-1d1048.netlify.app/" target="_blank" class="projectLink">
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
