--- a/index.html
+++ b/index.html
@@ -290,18 +290,18 @@
               </li>
               <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <img src="img/portfolio/thumbnails/generator square.png" />
                   <div class="icons">
                     <a
-                      href="img/portfolio/dog.jpeg"
+                      href="img/portfolio/generator.png"
                       title="View image"
                       class="openButton"
                       data-fancybox
-                      data-caption="fancy dog"
+                      data-caption="Random Generator"
                     >
                       <i class="fa fa-search"></i>
                     </a>
-                    <a href="" target="_blank" class="projectLink">
+                    <a href="https://heuristic-aryabhata-29666d.netlify.app/" target="_blank" class="projectLink">
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
