linking netlify to github

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 </div>
               </li>
 
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+              <!-- <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
                   <div class="icons">
@@ -354,7 +354,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
-              </li>
+              </li> -->
 
               <li
                 class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
@@ -384,7 +384,7 @@
                   <div class="imageOverlay"></div>
                 </div>
               </li>
-
+<!-- 
               <li
                 class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
                 onclick=""
@@ -407,8 +407,8 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
-              </li>
-
+              </li> -->
+<!-- 
               <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
@@ -491,9 +491,9 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
-              </li>
+              </li> -->
 
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+              <!-- <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
                   <div class="icons">
@@ -512,9 +512,9 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
-              </li>
+              </li> -->
 
-              <li
+              <!-- <li
                 class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
                 onclick=""
               >
@@ -536,9 +536,9 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
-              </li>
+              </li> -->
 
-              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+              <!-- <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
                   <div class="icons">
@@ -557,9 +557,9 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
-              </li>
+              </li> -->
 
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+              <!-- <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
                   <div class="icons">
@@ -578,7 +578,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
