--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
                 </div>
               </li>
 
-              <!-- <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
-                  <img src="img/portfolio/thumbnails/dog-square.jpeg" />
+                  <img src="img/portfolio/thumbnails/fripe-online-square.png" />
                   <div class="icons">
                     <a
-                      href="img/portfolio/dog.jpeg"
+                      href="img/portfolio/fripe-online.png"
                       title="View image"
                       class="openButton"
                       data-fancybox
@@ -344,7 +344,7 @@
                       <i class="fa fa-search"></i>
                     </a>
                     <a
-                      href="https://expensify-couldit.herokuapp.com/"
+                      href="https://fripe-online.herokuapp.com/"
                       target="_blank"
                       class="projectLink"
                       title="Visit"
@@ -354,7 +354,7 @@
                   </div>
                   <div class="imageOverlay"></div>
                 </div>
-              </li> -->
+              </li>
 
               <li
                 class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
