--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 </div>
               </li>
 
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+              <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/squarelandingpage.png" />
                   <div class="icons">
@@ -330,7 +330,7 @@
                 </div>
               </li>
 
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+              <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/fripe-online-square.png" />
                   <div class="icons">
