--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     >
                       <i class="fa fa-search"></i>
                     </a>
-                    <a href="" target="_blank" class="projectLink">
+                    <a href="https://optimistic-stonebraker-1d9994.netlify.app/" target="_blank" class="projectLink">
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
