--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
           </div>
           <div class="owl-carousel owl-theme">
             <div class="skill">
-              <span class="chart" data-percent="58">
+              <span class="chart" data-percent="78">
                 <span class="percent">58</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>Js</h4>
-              <p>Used in most of my web based projects</p>
+              <p></p>
             </div>
             <div class="skill">
               <span class="chart" data-percent="90">
@@ -131,7 +131,7 @@
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>HTML5</h4>
-              <p>Used in most of my web based projects</p>
+              <p></p>
             </div>
             <div class="skill">
               <span class="chart" data-percent="80">
@@ -139,7 +139,7 @@
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>CSS3</h4>
-              <p>Used in most of my web based projects</p>
+              <p></p>
             </div>
             <div class="skill">
               <span class="chart" data-percent="70">
@@ -147,20 +147,70 @@
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>React</h4>
-              <p>Used in most of my web based projects</p>
+              <p></p>
+            </div>
+            <div class="skill">
+              <span class="chart" data-percent="75">
+                <span class="percent">85</span>
+                <canvas height="152" width="152"></canvas>
+              </span>
+              <h4>Nodejs</h4>
+              <p></p>
+            </div>
+            <div class="skill">
+              <span class="chart" data-percent="60">
+                <span class="percent">85</span>
+                <canvas height="152" width="152"></canvas>
+              </span>
+              <h4>Sass</h4>
+              <p></p>
             </div>
             <div class="skill">
               <span class="chart" data-percent="85">
                 <span class="percent">85</span>
                 <canvas height="152" width="152"></canvas>
               </span>
-              <h4>Nodejs</h4>
-              <p>Used in most of my web based projects</p>
+              <h4>Firebase</h4>
+              <p></p>
+            </div>
+            <div class="skill">
+              <span class="chart" data-percent="70">
+                <span class="percent">85</span>
+                <canvas height="152" width="152"></canvas>
+              </span>
+              <h4>git</h4>
+              <p></p>
+            </div>
+            <div class="skill">
+              <span class="chart" data-percent="68">
+                <span class="percent">85</span>
+                <canvas height="152" width="152"></canvas>
+              </span>
+              <h4>Redux</h4>
+              <p></p>
+            </div>
+            <div class="skill">
+              <span class="chart" data-percent="53">
+                <span class="percent">85</span>
+                <canvas height="152" width="152"></canvas>
+              </span>
+              <h4>bootstrap</h4>
+              <p></p>
+            </div>
+            <div class="skill">
+              <span class="chart" data-percent="60">
+                <span class="percent">85</span>
+                <canvas height="152" width="152"></canvas>
+              </span>
+              <h4>jquery</h4>
+              <p></p>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+
     <div id="stats" class="statsSection section">
       <div class="container">
         <div class="row">
@@ -171,7 +221,7 @@
                   <i class="fas fa-gamepad"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">40</h2>
+                  <h2 class="counter">3</h2>
                   <h3>Mini Games</h3>
                 </div>
               </div>
@@ -184,7 +234,7 @@
                   <i class="fab fa-app-store-ios"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">60</h2>
+                  <h2 class="counter">12</h2>
                   <h3>Apps</h3>
                 </div>
               </div>
@@ -194,10 +244,10 @@
             <div class="squareItem">
               <div class="squareInnerContainer">
                 <div class="squareIcon">
-                  <i class="fab fa-github"></i>
+                  <i class="fab fa-chrome"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">30</h2>
+                  <h2 class="counter">2</h2>
                   <h3>websites</h3>
                 </div>
               </div>
@@ -210,7 +260,7 @@
                   <i class="fab fa-html5"></i>
                 </div>
                 <div class="squareContent">
-                  <h2 class="counter">140</h2>
+                  <h2 class="counter">14</h2>
                   <h3>HTML projects</h3>
                 </div>
               </div>
