--- a/index.html
+++ b/index.html
@@ -298,12 +298,13 @@
 
           <div class="itemsContainer">
             <ul class="items">
-              <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+              <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/square.png" />
                   <div class="icons">
                     <a
                       href="img/portfolio/screencapture-192-168-1-100-3000-2020-11-20-10_21_32.png"
+
                       title="View image"
                       class="openButton"
                       data-fancybox
