adding amazon clone web-site

--- a/index.html
+++ b/index.html
@@ -210,7 +210,6 @@
       </div>
     </div>
 
-
     <div id="stats" class="statsSection section">
       <div class="container">
         <div class="row">
@@ -298,13 +297,15 @@
 
           <div class="itemsContainer">
             <ul class="items">
-              <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+              <li
+                class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
+                onclick=""
+              >
                 <div class="item">
                   <img src="img/portfolio/thumbnails/square.png" />
                   <div class="icons">
                     <a
                       href="img/portfolio/screencapture-192-168-1-100-3000-2020-11-20-10_21_32.png"
-
                       title="View image"
                       class="openButton"
                       data-fancybox
@@ -312,7 +313,11 @@
                     >
                       <i class="fa fa-search"></i>
                     </a>
-                    <a href="https://optimistic-stonebraker-1d9994.netlify.app/" target="_blank" class="projectLink">
+                    <a
+                      href="https://optimistic-stonebraker-1d9994.netlify.app/"
+                      target="_blank"
+                      class="projectLink"
+                    >
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
@@ -332,7 +337,11 @@
                     >
                       <i class="fa fa-search"></i>
                     </a>
-                    <a href="https://jovial-nightingale-1d1048.netlify.app/" target="_blank" class="projectLink">
+                    <a
+                      href="https://jovial-nightingale-1d1048.netlify.app/"
+                      target="_blank"
+                      class="projectLink"
+                    >
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
@@ -352,7 +361,11 @@
                     >
                       <i class="fa fa-search"></i>
                     </a>
-                    <a href="https://heuristic-aryabhata-29666d.netlify.app/" target="_blank" class="projectLink">
+                    <a
+                      href="https://heuristic-aryabhata-29666d.netlify.app/"
+                      target="_blank"
+                      class="projectLink"
+                    >
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
@@ -373,7 +386,11 @@
                     >
                       <i class="fa fa-search"></i>
                     </a>
-                    <a href="https://admiring-volhard-a6787f.netlify.app/" target="_blank" class="projectLink">
+                    <a
+                      href="https://admiring-volhard-a6787f.netlify.app/"
+                      target="_blank"
+                      class="projectLink"
+                    >
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
@@ -381,7 +398,10 @@
                 </div>
               </li>
 
-              <li class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
+              <li
+                class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
+                onclick=""
+              >
                 <div class="item">
                   <img src="img/portfolio/thumbnails/fripe-online-square.png" />
                   <div class="icons">
@@ -435,7 +455,36 @@
                   <div class="imageOverlay"></div>
                 </div>
               </li>
-<!-- 
+
+              <li
+                class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
+                onclick=""
+              >
+                <div class="item">
+                  <img src="img/portfolio/thumbnails/amazon-clone.png" />
+                  <div class="icons">
+                    <a
+                      href="img/portfolio/amazon-clone.png"
+                      title="View image"
+                      class="openButton"
+                      data-fancybox
+                      data-caption="Expense App"
+                    >
+                      <i class="fa fa-search"></i>
+                    </a>
+                    <a
+                      href="https://clone-fe780.web.app/"
+                      title="Visit"
+                      target="_blank"
+                      class="projectLink"
+                    >
+                      <i class="fa fa-link"></i>
+                    </a>
+                  </div>
+                  <div class="imageOverlay"></div>
+                </div>
+              </li>
+              <!-- 
               <li
                 class="websites col-xs-6 col-sm-4 col-md-3 col-lg-3"
                 onclick=""
@@ -459,7 +508,7 @@
                   <div class="imageOverlay"></div>
                 </div>
               </li> -->
-<!-- 
+              <!-- 
               <li class="me col-xs-6 col-sm-4 col-md-3 col-lg-3" onclick="">
                 <div class="item">
                   <img src="img/portfolio/thumbnails/dog-square.jpeg" />
