--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#skills">Skills</a>
+          <a class="nav-link" href="#skills" >Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#stats">Stats</a>
+          <a class="nav-link" href="/resume-ahmedbengayess.pdf" download>download resume</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
@@ -110,7 +110,42 @@
       </div>
     </div>
 
-    <div id="skills" class="skillsSection section">
+    <section class="technologies__container" id="skills">
+      <h2 class="technologies__title">What I work with</h2>
+      <div class="technologies__logos">
+        <img src="/img/react-logo.png" alt="React" class="technologies__img" title="React"/>
+        <img src="/img/redux-logo.png" alt="Redux" class="technologies__img" title="Redux"/>
+        <img src="/img/node-logo.png" alt="Node" class="technologies__img" title="Node" />
+        <img
+          src="/img/express-logo.png"
+          alt="Express"
+          class="technologies__img"
+          title="Express"
+        />
+        <img
+          src="/img/mongodb-logo.png"
+          alt="MongoDB"
+          class="technologies__img"
+          title="MongoDB"
+        />
+        <img src="/img/sass-logo.png" alt="Sass" class="technologies__img"  title="Sass"/>
+        <img
+          src="/img/firebase-logo.png"
+          alt="Firebase"
+          class="technologies__img"
+          title="Firebase"
+        />
+        <img
+          src="/img/bootstrap-logo.png"
+          alt="Bootstrap"
+          class="technologies__img"
+          title="Bootstrap"
+        />
+        <img src="/img/git-logo.png" alt="git" class="technologies__img" title="git"/>
+      </div>
+    </section>
+
+    <!-- <div id="skills" class="skillsSection section">
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
@@ -209,9 +244,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div id="stats" class="statsSection section">
+    <!-- <div id="stats" class="statsSection section">
       <div class="container">
         <div class="row">
           <div class="col-md-3 col-sm-6">
@@ -268,7 +303,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div id="contact" class="contactSection section">
       <div class="col-md-12 text-center">
