--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a class="nav-link" href="#skills" >Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/resume-ahmedbengayess.pdf" download>Download resume</a>
+          <!-- <a class="nav-link" href="/resume-ahmedbengayess.pdf" download>Download resume</a> -->
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact</a>
