--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
           <div class="col-md-7">
             <!-- <h4>My name is WAJDI DOUIRI</h4> -->
             <p>
-              My name is Wajdi Douiri from Tunisia, I'm a self-taught
+              My name is Wajdi Douiri I'm from Tunisia, a self-taught
               FullStack javascript web developer. I work mainly with React.js
               and Node.js. formerly a Networking Tech , Yet I found my passion
               in web development, I can create web sites (static or
-              interactive), and FullStack web applications from start to end,
+              interactive), and FullStack web applications from start to end.
             </p>
             <p></p>
           </div>
@@ -145,165 +145,7 @@
       </div>
     </section>
 
-    <!-- <div id="skills" class="skillsSection section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <h2>TECHNICAL SKILLS</h2>
-            <p>A representation of my proficiency in each skill</p>
-          </div>
-          <div class="owl-carousel owl-theme">
-            <div class="skill">
-              <span class="chart" data-percent="80">
-                <span class="percent">80</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>Js</h4>
-              <p></p>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="90">
-                <span class="percent">90</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>HTML5</h4>
-              <p></p>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="80">
-                <span class="percent">80</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>CSS3</h4>
-              <p></p>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="70">
-                <span class="percent">70</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>React</h4>
-              <p></p>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="75">
-                <span class="percent">70</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>Nodejs</h4>
-              <p></p>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="60">
-                <span class="percent">85</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>Sass</h4>
-              <p></p>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="85">
-                <span class="percent">85</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>Firebase</h4>
-              <p></p>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="70">
-                <span class="percent">85</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>git</h4>
-              <p></p>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="68">
-                <span class="percent">85</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>Redux</h4>
-              <p></p>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="53">
-                <span class="percent">85</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>bootstrap</h4>
-              <p></p>
-            </div>
-            <div class="skill">
-              <span class="chart" data-percent="60">
-                <span class="percent">60</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>MongoDB</h4>
-              <p></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-    <!-- <div id="stats" class="statsSection section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fas fa-gamepad"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">3</h2>
-                  <h3>Mini Games</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fab fa-app-store-ios"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">12</h2>
-                  <h3>Apps</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fab fa-chrome"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">2</h2>
-                  <h3>websites</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fab fa-html5"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">14</h2>
-                  <h3>HTML projects</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
+    
 
     <div id="contact" class="contactSection section">
       <div class="col-md-12 text-center">
@@ -322,14 +164,7 @@
             <h1>PORTFOLIO</h1>
           </div>
 
-          <!-- <div class="filter">
-            <ul id="filters">
-              <li><a href="#" data-filter="*" class="current">ALL</a></li>
-              <li><a href="#" data-filter=".apps">Apps</a></li>
-              <li><a href="#" data-filter=".me">Me</a></li>
-              <li><a href="#" data-filter=".websites">Websites</a></li>
-            </ul>
-          </div> -->
+       
 
           <div class="itemsContainer">
             <ul class="items">
@@ -372,7 +207,7 @@
                   <img src="img/portfolio/thumbnails/expenses cut1.jpg" />
                   <div class="icons">
                     <a
-                      href="img/portfolio/expenses.jpg"
+                      href="img/portfolio/expenses.png"
                       title="View image"
                       class="openButton"
                       data-fancybox
